# OpenCLQPU

./: README.md
doc/: README.md
samples/QPE/: CMakeLists.txt  main.cpp  qpe.cl  run.sh
samples/kernel_cmatrix/: CMakeLists.txt  kernel.cl  main.cpp  run.sh
samples/kernel_cmatrix/malloc/: clIndexedQueue.h  clheap.h  kma.h
samples/kernel_malloc/: CMakeLists.txt  kernel_malloc.cl  main.cpp  pruebas.c  run.sh
samples/kernel_printf/: CMakeLists.txt  kernel.cl  main.cpp  run.sh
samples/shor/: CMakeLists.txt  main.cpp  shor.cl
src/malloc/: kma.cl
src/quantum/: qulacs.cl
src/utils/: utils.cl  utils.cpp  utils.hpp
